   -- bugfixes + restore features --
   * re-touch the timestamp file at the end. This way an interupted
     backup can be re-run because all the rdup files are still untouched.
   * update mirror.sh manpage: removed -z -k from the manual
   * yesterday.sh: work correctly with directories
   * gzip.sh accepts -d option: decompress
   * crypt.sh accepts -d option: decrypt
   Porting:
   * use cp -RP (works on FreeBSD) (ghostcorps (at) gmail.com)
   * use $OSTYPE to ease portability
   Restore:
   * Added rorrim.sh (this was restore.sh)
   * Added monthday.sh
   

30 Mar 2006: 0.2.6 Miek <miek@miek.nl>
   -- script updates and bugfixes --
   * more signal handling was added to the shell scripts, 
     they now echo what file they were processing when 
     they received the signal
   * mirror.sh: actually accept -v as an option
   * mirror.sh: handle filetype changes better 
   * usb-dump.sh: display (zenity) progress dialog when backing up
     moved usb-dump.sh to tools/
   * hist.sh: correctly count backwards x months
   * scripts/ directory was removed
   * rename usb-dump.sh to dump-here.sh, as that is what it does
     

18 Mar 2006: 0.2.5 Miek <miek@miek.nl>
   -- bugfixes --
   * usbdump.sh: be more informative on failed backups
   * error messages cleanup
   * indent is used to force coding style
   * added purge.sh script for deleting older backups
   * dump.sh and purge.sh now both have a manual page
     and are moved to the tools/ directory
   * patch for mirror.sh (add missing $) (Pavel Mracek)
   * Makefile cleanup


10 Mar 2006: 0.2.4 Miek <miek@miek.nl>
   -- bugfixes --
   * crawler.c: when finding .nobackup don't remove the parent directory
     (this keep 'dir' and 'dir/.nobackup' in the backup
   * mirror.sh: use chown -h for symlinks
   * mirorr.sh: mirror_suffix() use +DD.HH:MM again (Graham King)
   * dump.sh: create the top level backup dirs with 755
   * all scripts: enabled set -o nounset, to catch unbound vars

