@@ -11,12 +11,8 @@ o argument get .IR and \fI and \fR
 o option are BOLD
 
 :scripts:
-o portability again, we now depend on gnu stat
 o split up rdgrep.sh in dir and file grep (and link grep?)
-
-:port:
-check cp -RP on symlinks to directories on linux/freebsd
-port to freebsd
+o check relative filenames: hist.sh ../blaat
 
 :gtk: 
 o graphic (GTK) frontend? What would it do?
@@ -27,6 +23,7 @@ o graphic (GTK) frontend? What would it do?
         - yesterday.sh frontend
         - hist.sh frontend (or in nautilus?)
 
+
 LOW PRIO:
 :hdup2:
 o make complete hdup2 clone based on rdup
@@ -34,6 +31,13 @@ o make complete hdup2 clone based on rdup
   I want to see this, but I don't have enough time for this.
 
 DONE:
+o ported mirror.sh and hist.sh and yesterday.sh
+  09 Apr 2006: done
+
+o check cp -RP on symlinks to directories on linux/freebsd
+  port to freebsd
+  08/09 Apr 2006
+
 o where to place to aux. scripts? /usr/lib/rdup ??
   14 Mar 2006: I just place them in /usr/sbin
 
